# project-2_Kostyuchenko_M25-555

./: .README.md.swp  .gitignore  Makefile  README.md  db_meta.json  demo.cast  demo_JSON.cast  demo_json.cast  pyproject.toml
src/primitive_db/: .engine.py.swp  .main.py.swp  __init__.py  cache.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
test_install/: pyvenv.cfg
