[tool.poetry]
name = "project-2-kostyuchenko-m25-555"
version = "0.1.0"
description = ""
authors = ["Yarikyak <yarikyak@bk.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.9.0"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
